Adição de conteúdo e remoção de cod ñ usado

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -85,9 +85,9 @@
               <img class="" src="assets/images/page-titles/quem-somos.png">
             </div>
             <h1 class="pagetitle__heading">Quem Somos</h1>
-            <p class="pagetitle__desc mb-30">Inaugurado em 08 de maio de 1992 para exercer atividade em análises
-              clínicas, o Hemolab desempenha hoje relevante papel de auxílio diagnóstico na Medicina do Rio Grande do
-              Norte.
+            <p class="pagetitle__desc mb-30">Desde 08 de maio de 1992, o Hemolab atua com excelência no auxílio de
+              diagnóstico na Medicina do Rio Grande do Norte. Fundamentado em princípios éticos que refletem em uma
+              administração voltada à inovação, alta tecnologia, transparência e qualificação profissional.
             </p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
@@ -144,9 +144,23 @@
                     or medical enquiry call us.
                   </p>
                   <ul class="list-items list-items-layout2 list-unstyled mb-10">
-                    <li class="check">Fractures and dislocations</li>
-                    <li class="check">Health Assessments</li>
-                    <li class="check">Health Assessments</li>
+                    <li><span class="fa-li ml-4"><i class="fa-solid fa-circle-check color-primary"></i></span>Qualidade
+                    </li>
+                    <li><span class="fa-li ml-4"><i
+                          class="fa-solid fa-circle-check color-primary"></i></span>Credibilidade
+                    </li>
+                    <li><span class="fa-li ml-4"><i class="fa-solid fa-circle-check color-primary"></i></span>Confiança
+                    </li>
+                    <li><span class="fa-li ml-4"><i class="fa-solid fa-circle-check color-primary"></i></span>Agilidade
+                    </li>
+                    <li><span class="fa-li ml-4"><i class="fa-solid fa-circle-check color-primary"></i></span>Valores
+                    </li>
+                    <li><span class="fa-li ml-4"><i
+                          class="fa-solid fa-circle-check color-primary"></i></span>Honestidade
+                    </li>
+                    <li><span class="fa-li ml-4"><i
+                          class="fa-solid fa-circle-check color-primary"></i></span>Transparência
+                    </li>
                   </ul>
                 </div><!-- /.widget-content -->
               </div><!-- /.widget-help -->
@@ -162,7 +176,7 @@
                     <div class="accordion-item">
                       <div class="accordion__header collapsed" data-toggle="collapse" data-target="#collapse3"
                         aria-expanded="false">
-                        <a class="accordion__title" href="#">PCR PARA VÍRUS OROPOUCHE</a>
+                        <a class="accordion__title" href="#">Quais são os tipos de exames realizados?</a>
                       </div><!-- /.accordion-item-header -->
                       <div id="collapse3" class="collapse" data-parent="#accordion">
                         <div class="accordion__body">
@@ -173,9 +187,22 @@
                       </div>
                     </div><!-- /.accordion-item -->
                     <div class="accordion-item">
+                      <div class="accordion__header collapsed" data-toggle="collapse" data-target="#collapse2"
+                        aria-expanded="false">
+                        <a class="accordion__title" href="#">Quais os horários de funcionamentos</a>
+                      </div><!-- /.accordion-item-header -->
+                      <div id="collapse2" class="collapse" data-parent="#accordion">
+                        <div class="accordion__body">
+                          <p>With any financial product that you buy, it is important that you know you are getting
+                            the best
+                            advice from a reputable company as often</p>
+                        </div><!-- /.accordion-item-body -->
+                      </div>
+                    </div><!-- /.accordion-item -->
+                    <div class="accordion-item">
                       <div class="accordion__header" data-toggle="collapse" data-target="#collapse1"
                         aria-expanded="true">
-                        <a class="accordion__title" href="#">PCR PARA VÍRUS MAYARO</a>
+                        <a class="accordion__title" href="#">Saída de resultados</a>
                       </div><!-- /.accordion-item-header -->
                       <div id="collapse1" class="collapse" data-parent="#accordion">
                         <div class="accordion__body">
