--- a/servicos.html
+++ b/servicos.html
@@ -113,93 +113,15 @@
         <div class="row">
           <!-- service item #1 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="service-item">
-              <div class="service__icon">
-                <i class="icon-head"></i>
-                <i class="icon-head"></i>
-              </div><!-- /.service__icon -->
-              <div class="service__content">
-                <h4 class="service__title">Hematologia</h4>
-                <p class="service__desc">Some neurologists receive subspecialty training focusing on a particular area
-                  of
-                  the fields, these training programs are called fellowships, and are one to two years.
-                </p>
-              </div><!-- /.service__content -->
-            </div><!-- /.service-item -->
-          </div><!-- /.col-lg-4 -->
-          <!-- service item #2 -->
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="service-item">
-              <div class="service__icon">
-                <i class="icon-heart"></i>
-                <i class="icon-heart"></i>
-              </div><!-- /.service__icon -->
-              <div class="service__content">
-                <h4 class="service__title">Imuno-hematologia</h4>
-                <p class="service__desc">All cardiologists study the disorders of the heart, but the study of adult and
-                  child heart disorders are trained to take care of small children and adult heart disease.
-                </p>
-              </div><!-- /.service__content -->
-            </div><!-- /.service-item -->
-          </div><!-- /.col-lg-4 -->
-          <!-- service item #3 -->
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="service-item">
-              <div class="service__icon">
-                <i class="icon-microscope"></i>
-                <i class="icon-microscope"></i>
-              </div><!-- /.service__icon -->
-              <div class="service__content">
-                <h4 class="service__title">Citometria de fluxo</h4>
-                <p class="service__desc">Pathology is the study of disease, it is the bridge between science and
-                  medicine.
-                  Also it underpins every aspect of patient care, from diagnostic testing and treatment.
-                </p>
-              </div><!-- /.service__content -->
-            </div><!-- /.service-item -->
-          </div><!-- /.col-lg-4 -->
-          <!-- service item #4 -->
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="service-item">
-              <div class="service__icon">
-                <i class="icon-dropper"></i>
-                <i class="icon-dropper"></i>
-              </div><!-- /.service__icon -->
-              <div class="service__content">
-                <h4 class="service__title">Urinálises</h4>
-                <p class="service__desc">Analyzing the radon or radon progeny concentrations with passive devices, or
-                  the
-                  act of calibrating radon or radon progeny measurement devices.
-                </p>
-              </div><!-- /.service__content -->
-            </div><!-- /.service-item -->
-          </div><!-- /.col-lg-4 -->
-          <!-- service item #5 -->
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="service-item">
-              <div class="service__icon">
-                <i class="icon-heart3"></i>
-                <i class="icon-heart3"></i>
-              </div><!-- /.service__icon -->
-              <div class="service__content">
-                <h4 class="service__title">Parasitologia</h4>
-                <p class="service__desc">Pediatric providers see patients from birth into early adulthood to make sure
-                  children achieve stay healthy. Our care includes preventive health checkups.
-                </p>
-              </div><!-- /.service__content -->
-            </div><!-- /.service-item -->
-          </div><!-- /.col-lg-4 -->
-          <!-- service item #6 -->
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="service-item">
+            <div class="service-item" id="service-internal">
               <div class="service__icon">
                 <i class="icon-heart2"></i>
                 <i class="icon-heart2"></i>
               </div><!-- /.service__icon -->
               <div class="service__content">
                 <h4 class="service__title">Vacinas</h4>
-                <p class="service__desc">For people requiring additional follow up, the Cardiac Clinic provides rapid
-                  access.
+                <p class="service__desc">O hemolab Vacinas é localizado na nossa Unidade Capim Macio, dispõe de vacinas
+                  para todas as fases da vida, do infantil a melhor idade.
                 </p>
                 <ul class="list-items list-items-layout1 list-unstyled">
                   <a href="https://api.whatsapp.com/send?phone=5584992113793">
@@ -208,6 +130,36 @@
                     </li>
                   </a>
                 </ul>
+              </div><!-- /.service__content -->
+            </div><!-- /.service-item -->
+          </div><!-- /.col-lg-4 -->
+          <!-- service item #2 -->
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="service-item" id="service-internal">
+              <div class="service__icon">
+                <i class="icon-blood-test"></i>
+                <i class="icon-blood-test"></i>
+              </div><!-- /.service__icon -->
+              <div class="service__content">
+                <h4 class="service__title">Coletas externas</h4>
+                <p class="service__desc">Praticidade, conforto e segurança são os principais benefícios do serviço de
+                  coleta externa do Hemolab, basta agendar com pelo menos 24h de antecedência.
+                </p>
+              </div><!-- /.service__content -->
+            </div><!-- /.service-item -->
+          </div><!-- /.col-lg-4 -->
+          <!-- service item #3 -->
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="service-item" id="service-internal">
+              <div class="service__icon">
+                <i class="icon-heart"></i>
+                <i class="icon-heart"></i>
+              </div><!-- /.service__icon -->
+              <div class="service__content">
+                <h4 class="service__title">Drive-thru</h4>
+                <p class="service__desc">Nosso drive-thru é ideal para sua coleta de exames com mais segurança e
+                  comodidade fica localizado na Av. Nascimento de Castro, 1909.
+                </p>
               </div><!-- /.service__content -->
             </div><!-- /.service-item -->
           </div><!-- /.col-lg-4 -->
