--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <!-- unidade-item #1 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Petrópolis</h4>
@@ -282,7 +282,7 @@
               <!-- unidade-item #2 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Nascimento de Castro</h4>
@@ -301,7 +301,7 @@
               <!-- unidade-item #3 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Miguel Castro</h4>
@@ -320,7 +320,7 @@
               <!-- unidade-item #4 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Capim Macio</h4>
@@ -338,7 +338,7 @@
               <!-- unidade-item #5 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Vacinas</h4>
@@ -356,7 +356,7 @@
               <!-- unidade-item #6 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Coophab</h4>
@@ -374,7 +374,7 @@
               <!-- unidade-item #7 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Cidade da Esperança</h4>
@@ -393,7 +393,7 @@
               <!-- unidade-item #8 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Itapetinga</h4>
@@ -413,7 +413,7 @@
               <!-- unidade-item #9 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Potengi</h4>
@@ -433,7 +433,7 @@
               <!-- unidade-item #10 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - São Gonçalo do Amarante</h4>
@@ -451,7 +451,7 @@
               <!-- unidade-item #11 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Praia Shopping</h4>
@@ -469,7 +469,7 @@
               <!-- unidade-item #12 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Maria Lacerda</h4>
@@ -487,7 +487,7 @@
               <!-- unidade-item #13 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Parnamirim</h4>
@@ -505,7 +505,7 @@
               <!-- unidade-item #14 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Neópolis</h4>
@@ -523,7 +523,7 @@
               <!-- unidade-item #15 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Satélite</h4>
@@ -542,7 +542,7 @@
               <!-- unidade-item #16 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Ceará-mirim</h4>
@@ -593,7 +593,7 @@
             <!-- Certificado 1 -->
             <div class="member">
               <div class="member__img">
-                <img src="assets/images/team/1.jpg" alt="member img">
+                <img src="assets/images/team/1.jpg" alt="certificado img">
               </div><!-- /.cert-img -->
               <div class="member__info">
                 <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2020)</a></h5>
@@ -606,7 +606,7 @@
             <!-- Certificado 2 -->
             <div class="member">
               <div class="member__img">
-                <img src="assets/images/team/2.jpg" alt="member img">
+                <img src="assets/images/team/2.jpg" alt="certificado img">
               </div><!-- /.member-img -->
               <div class="member__info">
                 <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2021)</a></h5>
@@ -619,7 +619,7 @@
             <!-- Certificado 3 -->
             <div class="member">
               <div class="member__img">
-                <img src="assets/images/team/3.jpg" alt="member img">
+                <img src="assets/images/team/3.jpg" alt="certificado img">
               </div><!-- /.member-img -->
               <div class="member__info">
                 <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2022)</a></h5>
@@ -733,73 +733,73 @@
           <div class="slick-carousel"
             data-slick='{"slidesToShow": 4, "slidesToScroll": 1, "autoplay": true, "arrows": true, "dots": false, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 2}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
             <div class="img-convenio">
-              <img src="assets/images/gallery/amil.png" alt="gallery img">
+              <img src="assets/images/gallery/amil.png" alt="amil convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/assefaz.png" alt="gallery img">
+              <img src="assets/images/gallery/assefaz.png" alt="assefaz convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/bradesco.png" alt="gallery img">
+              <img src="assets/images/gallery/bradesco.png" alt="bradesco convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/caixa.png" alt="gallery img">
+              <img src="assets/images/gallery/caixa.png" alt="caixa convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/camed.png" alt="gallery img">
+              <img src="assets/images/gallery/camed.png" alt="camed convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/cassi.png" alt="gallery img">
+              <img src="assets/images/gallery/cassi.png" alt="cassi convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/caurn.png" alt="gallery img">
+              <img src="assets/images/gallery/caurn.png" alt="caurn convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/conab.png" alt="gallery img">
+              <img src="assets/images/gallery/conab.png" alt="conab convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/fachesf.png" alt="gallery img">
+              <img src="assets/images/gallery/fachesf.png" alt="fachesf convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/gama.png" alt="gallery img">
+              <img src="assets/images/gallery/gama.png" alt="gama convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Geap.png" alt="gallery img">
+              <img src="assets/images/gallery/Geap.png" alt="geap convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/golden-cross.png" alt="gallery img">
+              <img src="assets/images/gallery/golden-cross.png" alt="golden cross convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/hapvida.png" alt="gallery img">
+              <img src="assets/images/gallery/hapvida.png" alt="hapvida convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Humana.png" alt="gallery img">
+              <img src="assets/images/gallery/Humana.png" alt="Humana convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Mediservice.png" alt="gallery img">
+              <img src="assets/images/gallery/Mediservice.png" alt="Mediservice convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/NotreDame.png" alt="gallery img">
+              <img src="assets/images/gallery/NotreDame.png" alt="Notredame convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Petrobras.png" alt="gallery img">
+              <img src="assets/images/gallery/Petrobras.png" alt="Petrobras convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Plan-Assiste.png" alt="gallery img">
+              <img src="assets/images/gallery/Plan-Assiste.png" alt="Plan-Assiste convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Postal.png" alt="gallery img">
+              <img src="assets/images/gallery/Postal.png" alt="Postal convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Smile.png" alt="gallery img">
+              <img src="assets/images/gallery/Smile.png" alt="Smile convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Sulamerica.png" alt="gallery img">
+              <img src="assets/images/gallery/Sulamerica.png" alt="Sulamerica convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Unimed.png" alt="gallery img">
+              <img src="assets/images/gallery/Unimed.png" alt="Unimed convênio img">
             </div>
             <div class="img-convenio">
-              <img src="assets/images/gallery/Vitallis.png" alt="gallery img">
+              <img src="assets/images/gallery/Vitallis.png" alt="Vitallis convênio img">
             </div>
 
           </div><!-- /.gallery-images-wrapper -->
