--- a/certificados.html
+++ b/certificados.html
@@ -114,7 +114,7 @@
               <!-- Certificado 1 -->
               <div class="member">
                 <div class="member__img">
-                  <img src="assets/images/team/1.jpg" alt="member img">
+                  <img src="assets/images/team/1.jpg" alt="certificado img">
                 </div><!-- /.cert-img -->
                 <div class="member__info">
                   <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2020)</a></h5>
@@ -127,7 +127,7 @@
               <!-- Certificado 2 -->
               <div class="member">
                 <div class="member__img">
-                  <img src="assets/images/team/2.jpg" alt="member img">
+                  <img src="assets/images/team/2.jpg" alt="certificado img">
                 </div><!-- /.member-img -->
                 <div class="member__info">
                   <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2021)</a></h5>
@@ -139,7 +139,7 @@
               <!-- Certificado 3 -->
               <div class="member">
                 <div class="member__img">
-                  <img src="assets/images/team/3.jpg" alt="member img">
+                  <img src="assets/images/team/3.jpg" alt="certificado img">
                 </div><!-- /.member-img -->
                 <div class="member__info">
                   <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2022)</a></h5>
