Adição de imagem de unidades e vídeo

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 d-flex align-items-end mt-50 mb-100">
           <div class="video-banner">
-            <img src="assets/images/about/1.jpg" alt="about">
-            <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=NQ6vgPDTc1k">
+            <img src="assets/images/about/video.png" alt="about">
+            <a class="video__btn video__btn-white popup-video" href="https://youtu.be/ZALhLc3D-4w">
               <div class="video__player">
                 <i class="fa fa-play"></i>
               </div>
@@ -263,7 +263,7 @@
               <!-- unidade-item #1 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/petropolis - deodoro.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Petrópolis</h4>
@@ -282,7 +282,7 @@
               <!-- unidade-item #2 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/nascimento de castro.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Nascimento de Castro</h4>
@@ -301,7 +301,7 @@
               <!-- unidade-item #3 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/miguel castro.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Miguel Castro</h4>
@@ -320,7 +320,7 @@
               <!-- unidade-item #4 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/roberto freire, 915 E VACINAS.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Capim Macio</h4>
@@ -338,7 +338,7 @@
               <!-- unidade-item #5 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/roberto freire, 915 E VACINAS.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Vacinas</h4>
@@ -356,7 +356,7 @@
               <!-- unidade-item #6 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/coophab.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Coophab</h4>
@@ -374,7 +374,7 @@
               <!-- unidade-item #7 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/esperança.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Cidade da Esperança</h4>
@@ -393,7 +393,7 @@
               <!-- unidade-item #8 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/itapetinga.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Itapetinga</h4>
@@ -413,7 +413,7 @@
               <!-- unidade-item #9 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/RUA ILHEÚS.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Potengi</h4>
@@ -433,7 +433,7 @@
               <!-- unidade-item #10 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/sao gonçalo.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - São Gonçalo do Amarante</h4>
@@ -451,7 +451,7 @@
               <!-- unidade-item #11 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/praia shopping.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Praia Shopping</h4>
@@ -469,7 +469,7 @@
               <!-- unidade-item #12 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/maria lacerda.jpeg" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Maria Lacerda</h4>
@@ -487,7 +487,7 @@
               <!-- unidade-item #13 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/boa esperanca.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Parnamirim</h4>
@@ -505,7 +505,7 @@
               <!-- unidade-item #14 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/neopolis.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Neópolis</h4>
@@ -523,7 +523,7 @@
               <!-- unidade-item #15 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/satélite.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Satélite</h4>
@@ -542,7 +542,7 @@
               <!-- unidade-item #16 -->
               <div class="service-item">
                 <div class="service__img">
-                  <img src="assets/images/unidades/unidade1.png" alt="unidade img" loading="lazy">
+                  <img src="assets/images/unidades/cerara-mirim.png" alt="unidade img" loading="lazy">
                 </div><!-- /.service__img -->
                 <div class="service__content">
                   <h4 class="service__title mb-30">Hemolab - Ceará-mirim</h4>
