Adição de vídeo na página 'quem somos'

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -117,8 +117,8 @@
               </p>
             </div>
             <div class="video-banner">
-              <img src="assets/images/about/1.jpg" alt="about">
-              <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4">
+              <img src="assets/images/about/video.png" alt="about">
+              <a class="video__btn video__btn-white popup-video" href="https://youtu.be/ZALhLc3D-4w">
                 <div class="video__player">
                   <i class="fa fa-play"></i>
                 </div>
