alteração de iframe youtube

--- a/index.html
+++ b/index.html
@@ -147,12 +147,11 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 d-flex align-items-end mt-50 mb-100">
           <div class="video-banner">
-            <img src="assets/images/about/video.png" alt="about">
-            <a class="video__btn video__btn-white popup-video" href="https://youtu.be/ZALhLc3D-4w">
-              <div class="video__player">
-                <i class="fa fa-play"></i>
-              </div>
-            </a>
+            <iframe width="570" height="370" src="https://www.youtube.com/embed/ZALhLc3D-4w?controls=0"
+              title="Hemolab 30 anos" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
           </div><!-- /.video-banner -->
         </div><!-- /.col-12 -->
       </div><!-- /.row -->
