--- a/quem-somos.html
+++ b/quem-somos.html
@@ -117,12 +117,11 @@
               </p>
             </div>
             <div class="video-banner">
-              <img src="assets/images/about/video.png" alt="about">
-              <a class="video__btn video__btn-white popup-video" href="https://youtu.be/ZALhLc3D-4w">
-                <div class="video__player">
-                  <i class="fa fa-play"></i>
-                </div>
-              </a>
+              <iframe width="770" height="499" src="https://www.youtube.com/embed/ZALhLc3D-4w?controls=0"
+                title="Hemolab 30 anos" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+              </iframe>
             </div><!-- /.video-banner -->
             <div class="about__Text2 mt-30 mb-50">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, quos. Facilis, et! Delectus, aliquam
