--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
             <!-- Certificado 1 -->
             <div class="member">
               <div class="member__img">
-                <img src="assets/images/team/1.jpg" alt="certificado img">
+                <img src="assets/images/certificados/PNCQ.png" alt="certificado img">
               </div><!-- /.cert-img -->
               <div class="member__info">
                 <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2020)</a></h5>
@@ -602,23 +602,11 @@
                 </p>
               </div><!-- /.cert-info -->
             </div><!-- /.Certificado 1 -->
-            <!-- Certificado 2 -->
-            <div class="member">
-              <div class="member__img">
-                <img src="assets/images/team/2.jpg" alt="certificado img">
-              </div><!-- /.member-img -->
-              <div class="member__info">
-                <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2021)</a></h5>
-                <p class="member__job">Categoria Diamante</p>
-                <p class="member__desc">Pioneiros no RN certificado pelo Sistema Nacional de Acreditação da Sociedade
-                  Brasileira de Análises Clínicas.
-                </p>
-              </div><!-- /.cert-info -->
-            </div><!-- /.Certificado 2 -->
+
             <!-- Certificado 3 -->
             <div class="member">
               <div class="member__img">
-                <img src="assets/images/team/3.jpg" alt="certificado img">
+                <img src="assets/images/certificados/DICQ.png" alt="certificado img">
               </div><!-- /.member-img -->
               <div class="member__info">
                 <h5 class="member__name"><a href="certificados.html">Excelência Laboratorial (2022)</a></h5>
